# obscura

./: README.md
crates/obscura-cdp/: Cargo.toml
crates/obscura-cdp/src/: dispatch.rs  server.rs
crates/obscura-cdp/src/domains/: fetch.rs  input.rs  page.rs
crates/obscura-cdp/tests/: concurrent_navigations.rs  concurrent_navigations_with_fetch.rs
crates/obscura-cli/src/: main.rs
crates/obscura-js/src/: lib.rs  ops.rs  runtime.rs
crates/obscura-net/: Cargo.toml
crates/obscura-net/src/: cookies.rs
